Changes in the structure of the project. Created two separated Jupyter files for each of the tasks of the project

--- a/AHLT_part2_drug_interaction_classifier.ipynb
+++ b/AHLT_part2_drug_interaction_classifier.ipynb
@@ -21,7 +21,7 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from drugs_xml_to_dataframe import drugs_xml_to_list\n",
+    "from xlm_parsers_functions import *\n",
     "\n",
     "## TODO list\n",
     "# Train the first ML model that will identify the drug names from a sentence\n",
@@ -59,13 +59,13 @@
     "\n",
     "# Parse the DrugBank Files\n",
     "drugs_dataset = []\n",
-    "parent_directory = 'LaboCase/Train/DrugBank/'\n",
+    "parent_directory = '../LaboCase/Train/DrugBank/'\n",
     "for filename in os.listdir(parent_directory):\n",
     "    if filename.endswith(\".xml\"):\n",
     "        # Parse the file\n",
     "        tree = ET.parse(parent_directory + filename)\n",
     "        # Create a list of lists with the interactions of the file\n",
-    "        drugs_dataset = drugs_dataset + drugs_xml_to_list(tree.getroot())\n",
+    "        drugs_dataset = drugs_dataset + listDDIFromXML(tree.getroot())\n",
     "\n",
     "\n",
     "DrugBank_df = pd.DataFrame(drugs_dataset, columns=headers)"
