New changes in the DrugBank DB parsing

--- a/parsing_DrugBank_entities.ipynb
+++ b/parsing_DrugBank_entities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,65 +26,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-47-a6b52d21f28b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdrug\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mroot\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdrug\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtag\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'{http://www.drugbank.ca}drug'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0mdrug_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdrug\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0msynonims\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdrug\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'synonims'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'hola'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'text'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "entities = []\n",
     "root = tree.getroot()\n",
-    "#for i in root:\n",
-    "#    print(i.tag)\n",
+    "for drug in root.findall('{http://www.drugbank.ca}drug'):\n",
+    "    entities.append(drug.find('{http://www.drugbank.ca}name').text)\n",
+    "    \n",
+    "    # Look for product names with the drug\n",
+    "    for drug_prod in drug.findall('{http://www.drugbank.ca}products'):\n",
+    "        for drug_prod in drug_prod.iter('{http://www.drugbank.ca}product'):\n",
+    "            for drug_prod_name in drug_prod.iter('{http://www.drugbank.ca}name'):\n",
+    "                # Only append the product if is formed by one word\n",
+    "                if len(drug_prod_name.text.split(' ')) == 1:\n",
+    "                    entities.append(drug_prod_name.text)\n",
     "\n",
-    "for drug in root:    \n",
-    "    if drug.tag == '{http://www.drugbank.ca}drug':\n",
-    "        drug_name = drug.find('name').text\n",
-    "        synonims = drug.find('synonims').text\n",
-    "        print('hola')\n",
-    "        print(drug_name, synonims)\n"
+    "# Retain only the unique entities\n",
+    "entities = set(entities)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "with(open('data/DrugBank_names_DB.txt', 'r')) as f:\n",
-    "    drugbank_db = f.read().splitlines()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Set of common words that we don't want to include\n",
-    "common_words = set(stopwords.words('english'))\n",
+    "# Write the 'entities' list into a file for later use\n",
+    "with(open('data/drugbank_entities_not_processed.txt', 'w')) as f:\n",
+    "    for i in entities:\n",
+    "        f.write(i + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19135"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the file\n",
+    "with(open('data/drugbank_entities_not_processed.txt', 'r')) as f:\n",
+    "    drugbank_db = f.read().splitlines()\n",
     "\n",
+    "len(drugbank_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50093"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tokenize all the entities\n",
     "drugbank_db_mod = []\n",
     "for entity in drugbank_db:\n",
     "    tokens = nltk.word_tokenize(entity)\n",
     "    for token in tokens:\n",
     "        drugbank_db_mod.append(token)\n",
     "        \n",
+    "len(drugbank_db_mod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81527"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Separate those entities with a dash\n",
     "drugbank_db_mod2 = []\n",
     "for token in drugbank_db_mod:\n",
     "    if '-' in token:\n",
@@ -94,29 +156,82 @@
     "    else:\n",
     "        drugbank_db_mod2.append(token)\n",
     "\n",
-    "        \n",
-    "drugbank_db_mod3 = []\n",
-    "for token in drugbank_db_mod2:\n",
-    "    if len(token) > 3 and not token.isnumeric() and token not in drugbank_db_mod3 and token not in common_words:\n",
-    "        drugbank_db_mod3.append(token)"
+    "len(drugbank_db_mod2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36553"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set of common words that we don't want to include\n",
+    "common_words = set(stopwords.words('english'))\n",
+    "\n",
+    "# Eliminate those entities that don't fullfill certain conditions\n",
+    "# Length > 3, is not completely numeric, no duplicates and is not a 'stopword'\n",
+    "drugbank_db_mod3 = []\n",
+    "for token in drugbank_db_mod2:\n",
+    "    if len(token) > 3 and not token.isnumeric() and token.lower() not in common_words:\n",
+    "        drugbank_db_mod3.append(token)\n",
+    "        \n",
+    "len(drugbank_db_mod3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with(open('data/DrugBank_names_DB2.txt', 'w')) as f:\n",
-    "    for entity in drugbank_db_mod3:\n",
+    "drugbank_db_mod4 = []\n",
+    "for token in drugbank_db_mod3:\n",
+    "    for ch in token:\n",
+    "        if ch.isalpha():\n",
+    "            drugbank_db_mod4.append(token)\n",
+    "            break\n",
+    "\n",
+    "len(drugbank_db_mod4)\n",
+    "\n",
+    "drugbank_db_mod4 = set(drugbank_db_mod4)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "drugbank_db_final = [x.lower() for x in drugbank_db_mod4]\n",
+    "drugbank_db_final = set(drugbank_db_final)\n",
+    "\n",
+    "\n",
+    "with(open('data/DrugBank_names_DB.txt', 'w')) as f:\n",
+    "    for entity in drugbank_db_final:\n",
     "        f.write(entity + '\\n')    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -125,8 +240,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ibuprofeno Ibuprofen\n",
-      "like like\n"
+      "Hello hello\n",
+      "Ibuprofeno ibuprofen\n",
+      "Ibuprofeno feno\n",
+      "Ibuprofeno profen\n",
+      "Ibuprofeno profeno\n",
+      "like like\n",
+      "Aspirins aspirin\n",
+      "Aspirins aspi\n"
      ]
     }
    ],
@@ -135,9 +256,31 @@
     "tokenized_sentence = nltk.word_tokenize(sentence)\n",
     "\n",
     "for token in tokenized_sentence:\n",
-    "    for drug in drugbank_db_mod3:\n",
-    "        if drug in token:\n",
+    "    for drug in drugbank_db_final:\n",
+    "        if drug in token.lower():\n",
     "            print(token, drug)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "like\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in tokenized_sentence:\n",
+    "    if token.lower() in drugbank_db_final:\n",
+    "        print(token)"
    ]
   },
   {
