DrugBank feature finalised

--- a/parsing_DrugBank_entities.ipynb
+++ b/parsing_DrugBank_entities.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
     "root = tree.getroot()\n",
     "for drug in root.findall('{http://www.drugbank.ca}drug'):\n",
     "    entities.append(drug.find('{http://www.drugbank.ca}name').text)\n",
-    "    \n",
+    "'''\n",
     "    # Look for product names with the drug\n",
     "    for drug_prod in drug.findall('{http://www.drugbank.ca}products'):\n",
     "        for drug_prod in drug_prod.iter('{http://www.drugbank.ca}product'):\n",
@@ -44,23 +44,14 @@
     "                # Only append the product if is formed by one word\n",
     "                if len(drug_prod_name.text.split(' ')) == 1:\n",
     "                    entities.append(drug_prod_name.text)\n",
-    "\n",
+    "'''\n",
     "# Retain only the unique entities\n",
     "entities = set(entities)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -74,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -82,10 +73,10 @@
     {
      "data": {
       "text/plain": [
-       "19135"
+       "11033"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -108,10 +99,10 @@
     {
      "data": {
       "text/plain": [
-       "50093"
+       "41974"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -137,10 +128,10 @@
     {
      "data": {
       "text/plain": [
-       "81527"
+       "69995"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -169,10 +160,10 @@
     {
      "data": {
       "text/plain": [
-       "36553"
+       "27362"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -214,14 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9553\n"
+     ]
+    }
+   ],
    "source": [
     "drugbank_db_final = [x.lower() for x in drugbank_db_mod4]\n",
     "drugbank_db_final = set(drugbank_db_final)\n",
+    "print(len(drugbank_db_final))\n",
     "\n",
     "\n",
     "with(open('data/DrugBank_names_DB.txt', 'w')) as f:\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -240,14 +240,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello hello\n",
-      "Ibuprofeno ibuprofen\n",
-      "Ibuprofeno feno\n",
-      "Ibuprofeno profen\n",
-      "Ibuprofeno profeno\n",
-      "like like\n",
-      "Aspirins aspirin\n",
-      "Aspirins aspi\n"
+      "ibuprofeno ibuprofen\n",
+      "like like\n"
      ]
     }
    ],
@@ -258,12 +252,12 @@
     "for token in tokenized_sentence:\n",
     "    for drug in drugbank_db_final:\n",
     "        if drug in token.lower():\n",
-    "            print(token, drug)"
+    "            print(token.lower(), drug)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -272,16 +266,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
       "like\n"
      ]
     }
    ],
-   "source": [
-    "for token in tokenized_sentence:\n",
-    "    if token.lower() in drugbank_db_final:\n",
-    "        print(token)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
