Validating part redefined

--- a/XML.Parser.ipynb
+++ b/XML.Parser.ipynb
@@ -28,7 +28,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn import svm\n",
-    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV # Parameter selection\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV,KFold # Parameter selection\n",
     "import time # Execution time of some blocks\n",
     "from nltk.tag import StanfordPOSTagger\n",
     "import statistics\n",
@@ -48,8 +48,8 @@
    "outputs": [],
    "source": [
     "# Set the data directories\n",
-    "train_dirs_whereto_parse = ['data/medium_train_DrugBank']\n",
-    "test_dirs_whereto_parse = ['data/medium_test_DrugBank']"
+    "train_dirs_whereto_parse = ['data/small_train_DrugBank']\n",
+    "test_dirs_whereto_parse = ['data/small_test_DrugBank']"
    ]
   },
   {
@@ -194,19 +194,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tunning SVM in python"
+    "Defining a small dataset for model selection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "validation_df = train_df.sample(frac=0.3)\n",
+    "X_val = validation_df.loc[:, [all(x) for x in list(zip(validation_df.columns!=target_name,validation_df.columns!=token_name))]]\n",
+    "Y_val = validation_df[target_name]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time for GridSearchCV:  0.0018301010131835938\n"
+      "Execution time for RandomSearchCV:  0.003072023391723633\n"
      ]
     }
    ],
@@ -216,23 +234,66 @@
     "\n",
     "# Look for the best parameters of the SVM model with GridSearchCV\n",
     "start = time.time()\n",
-    "clf = RandomizedSearchCV(svc,{'C': scipy.stats.norm(15,5), 'gamma': scipy.stats.expon(scale=.1),\n",
-    "                              'kernel': ['rbf'], 'class_weight':['balanced', None]},30) # 40 iterations\n",
+    "clf = RandomizedSearchCV(svc,{'C': scipy.stats.expon(scale=100), 'gamma': scipy.stats.expon(scale=.1),\n",
+    "                              'kernel': ['rbf'], 'class_weight':['balanced', None]},n_iter=40,n_jobs=-1)\n",
     "end = time.time()\n",
-    "print('Execution time for GridSearchCV: ', str(end - start))"
+    "print('Execution time for RandomSearchCV: ', str(end - start))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validating time of the SVM:  0.7366631031036377 \n",
+      "\n",
+      "Best estimator:  SVC(C=11.53850921570922, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma=0.11074407994336243,\n",
+      "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
+      "  shrinking=True, tol=0.001, verbose=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "clf.fit(X_val,Y_val)\n",
+    "end = time.time()\n",
+    "print('Validating time of the SVM: ', str(end - start),'\\n')\n",
+    "\n",
+    "print('Best estimator: ', clf.best_estimator_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trainig SVM in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training time of the SVM:  0.07061195373535156\n"
+     ]
+    }
+   ],
    "source": [
     "# Train the SVM model with the parameters selected before\n",
     "start = time.time()\n",
-    "clf.fit(X_train,Y_train)\n",
+    "model = clf.best_estimator_\n",
+    "model.fit(X_train,Y_train)\n",
     "end = time.time()\n",
-    "print('Training time of the SVM: ', str(end - start))"
+    "print('Training time of the SVM: ', str(end - start))\n"
    ]
   },
   {
@@ -244,11 +305,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results of the training evaluation:  \n",
+      "Precision:  72.94545454545455 \n",
+      "Recall:  84.34545454545454 \n",
+      "F1:  78.23\n"
+     ]
+    }
+   ],
    "source": [
-    "F1_train,train_precision,train_recall = makingPredictions(train_texts_entities,clf,drugbank_db,st,training_dummies)\n",
+    "F1_train,train_precision,train_recall = makingPredictions(train_texts_entities,model,drugbank_db,st,training_dummies)\n",
     "print('Results of the training evaluation: ','\\nPrecision: ',train_precision,'\\nRecall: ',train_recall,'\\nF1: ',F1_train,)"
    ]
   },
@@ -261,11 +333,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results of the evaluation of the test part:  \n",
+      "Precision:  55.166666666666664 \n",
+      "Recall:  74.61111111111111 \n",
+      "F1:  63.43\n"
+     ]
+    }
+   ],
    "source": [
-    "F1_test,test_precision,test_recall = makingPredictions(test_texts_entities,clf,drugbank_db,st,training_dummies)\n",
+    "F1_test,test_precision,test_recall = makingPredictions(test_texts_entities,model,drugbank_db,st,training_dummies)\n",
     "print('Results of the evaluation of the test part: ','\\nPrecision: ',test_precision,'\\nRecall: ',test_recall,'\\nF1: ',F1_test)"
    ]
   },
@@ -285,9 +368,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n## Log of results\\ndate, precision, recall, F1, features, test\\n14-May, 46.2, 52.1, 48.99, Token length; Prefixes/Suffixes; POS tag; Binary features (+-2); Token position; DrugBank DB; Shape, yes\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "## Log of results\n",
