--- a/XML.Parser.ipynb
+++ b/XML.Parser.ipynb
@@ -48,8 +48,8 @@
    "outputs": [],
    "source": [
     "# Set the data directories\n",
-    "train_dirs_whereto_parse = ['data/small_train_DrugBank']\n",
-    "test_dirs_whereto_parse = ['data/small_test_DrugBank']"
+    "train_dirs_whereto_parse = ['data/medium_train_DrugBank']\n",
+    "test_dirs_whereto_parse = ['data/medium_test_DrugBank']"
    ]
   },
   {
@@ -224,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time for RandomSearchCV:  0.003072023391723633\n"
+      "Execution time for RandomSearchCV:  0.0024099349975585938\n"
      ]
     }
    ],
@@ -242,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validating time of the SVM:  0.7366631031036377 \n",
+      "Validating time of the SVM:  536.2499442100525 \n",
       "\n",
-      "Best estimator:  SVC(C=11.53850921570922, cache_size=200, class_weight=None, coef0=0.0,\n",
-      "  decision_function_shape='ovr', degree=3, gamma=0.11074407994336243,\n",
+      "Best estimator:  SVC(C=11.640706301821716, cache_size=200, class_weight=None, coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma=0.15239767881460245,\n",
       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
       "  shrinking=True, tol=0.001, verbose=False)\n"
      ]
@@ -276,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time of the SVM:  0.07061195373535156\n"
+      "Training time of the SVM:  272.62662291526794\n"
      ]
     }
    ],
@@ -313,9 +313,9 @@
      "output_type": "stream",
      "text": [
       "Results of the training evaluation:  \n",
-      "Precision:  72.94545454545455 \n",
-      "Recall:  84.34545454545454 \n",
-      "F1:  78.23\n"
+      "Precision:  69.61844778545307 \n",
+      "Recall:  68.0361641609102 \n",
+      "F1:  68.82\n"
      ]
     }
    ],
@@ -341,9 +341,9 @@
      "output_type": "stream",
      "text": [
       "Results of the evaluation of the test part:  \n",
-      "Precision:  55.166666666666664 \n",
-      "Recall:  74.61111111111111 \n",
-      "F1:  63.43\n"
+      "Precision:  27.894736842105264 \n",
+      "Recall:  29.5 \n",
+      "F1:  28.67\n"
      ]
     }
    ],
