NER_classifier created

--- a/XML.Parser.ipynb
+++ b/XML.Parser.ipynb
@@ -47,9 +47,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# init time\n",
+    "first_init = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Set the data directories\n",
-    "train_dirs_whereto_parse = ['data/medium_train_DrugBank']\n",
-    "test_dirs_whereto_parse = ['data/medium_test_DrugBank']"
+    "train_dirs_whereto_parse = ['data/small_train_DrugBank']\n",
+    "test_dirs_whereto_parse = ['data/small_test_DrugBank']"
    ]
   },
   {
@@ -63,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Execution time for RandomSearchCV:  0.0024099349975585938\n"
+      "Execution time for RandomSearchCV:  0.0018048286437988281\n"
      ]
     }
    ],
@@ -242,17 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validating time of the SVM:  536.2499442100525 \n",
+      "Validating time of the SVM:  0.7095859050750732 \n",
       "\n",
-      "Best estimator:  SVC(C=11.640706301821716, cache_size=200, class_weight=None, coef0=0.0,\n",
-      "  decision_function_shape='ovr', degree=3, gamma=0.15239767881460245,\n",
+      "Best estimator:  SVC(C=101.11681838189297, cache_size=200, class_weight='balanced', coef0=0.0,\n",
+      "  decision_function_shape='ovr', degree=3, gamma=0.007913403811625126,\n",
       "  kernel='rbf', max_iter=-1, probability=False, random_state=None,\n",
       "  shrinking=True, tol=0.001, verbose=False)\n"
      ]
@@ -276,14 +286,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training time of the SVM:  272.62662291526794\n"
+      "Training time of the SVM:  0.16499805450439453\n"
      ]
     }
    ],
@@ -305,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,9 +323,9 @@
      "output_type": "stream",
      "text": [
       "Results of the training evaluation:  \n",
-      "Precision:  69.61844778545307 \n",
-      "Recall:  68.0361641609102 \n",
-      "F1:  68.82\n"
+      "Precision:  59.127272727272725 \n",
+      "Recall:  86.58181818181818 \n",
+      "F1:  70.27\n"
      ]
     }
    ],
@@ -333,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -341,15 +351,34 @@
      "output_type": "stream",
      "text": [
       "Results of the evaluation of the test part:  \n",
-      "Precision:  27.894736842105264 \n",
-      "Recall:  29.5 \n",
-      "F1:  28.67\n"
+      "Precision:  48.94444444444444 \n",
+      "Recall:  78.5 \n",
+      "F1:  60.3\n"
      ]
     }
    ],
    "source": [
     "F1_test,test_precision,test_recall = makingPredictions(test_texts_entities,model,drugbank_db,st,training_dummies)\n",
     "print('Results of the evaluation of the test part: ','\\nPrecision: ',test_precision,'\\nRecall: ',test_recall,'\\nF1: ',F1_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total execution time:  0.14007140000661214  minutes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# stopp time\n",
+    "end_time = time.time()\n",
+    "print('Total execution time: ',str((end_time-first_init)/60),' minutes')"
    ]
   },
   {
@@ -368,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +406,7 @@
        "'\\n## Log of results\\ndate, precision, recall, F1, features, test\\n14-May, 46.2, 52.1, 48.99, Token length; Prefixes/Suffixes; POS tag; Binary features (+-2); Token position; DrugBank DB; Shape, yes\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
