--- a/AHLT_part2_drug_interaction_classifier.ipynb
+++ b/AHLT_part2_drug_interaction_classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -29,6 +29,10 @@
     "from sklearn import svm\n",
     "import scipy.stats # for RandomizedSearchCV\n",
     "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, KFold, train_test_split # Parameter selection\n",
+    "import sklearn_crfsuite\n",
+    "from sklearn_crfsuite import scorers\n",
+    "from sklearn_crfsuite import metrics\n",
+    "\n",
     "\n",
     "# Other libraries\n",
     "import time # Execution time of some blocks\n",
@@ -38,6 +42,21 @@
     "from xlm_parsers_functions import *\n",
     "from drug_interaction_functions import *\n",
     "from drug_functions import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_dir = 'data/small_train_DrugBank/'\n",
+    "filename = 'Acamprosate_ddi.xml'\n",
+    "tree = ET.parse(data_dir + filename)\n",
+    "# Create a list of lists with the interactions of the file\n",
+    "train_text_entities_relations = listDDIFromXML(tree.getroot())\n"
    ]
   },
   {
@@ -164,7 +183,7 @@
    },
    "outputs": [],
    "source": [
-    "pd.options.display.max_columns = None\n",
+    "pd.options.display.max_columns = 5\n",
     "display(train_df.head())\n",
     "#train_df.dtypes"
    ]
@@ -269,6 +288,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## SVM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -330,6 +356,44 @@
     "print('Precision: ', round(computePrecision(true=true, pred=pred)*100, 1))\n",
     "print('Recall: ', round(computeRecall(true=true, pred=pred)*100, 1))\n",
     "print('F1: ', round(computeF1(true = true, pred = pred)*100, 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CRF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "\n",
+    "crf = sklearn_crfsuite.CRF(\n",
+    "    algorithm='lbfgs',\n",
+    "    c1=0.1,\n",
+    "    c2=0.1,\n",
+    "    max_iterations=100,\n",
+    "    all_possible_transitions=True\n",
+    ")\n",
+    "crf.fit(X_train, Y_train)"
    ]
   },
   {
