New features for the interactions model developed

--- a/AHLT_Drug_Interaction_CRF.ipynb
+++ b/AHLT_Drug_Interaction_CRF.ipynb
@@ -68,7 +68,9 @@
     "from xlm_parsers_functions import *\n",
     "from drug_interaction_functions import *\n",
     "from drug_functions import *\n",
-    "from NER_functions import *"
+    "from NER_functions import *\n",
+    "from ortographic_features import *\n",
+    "from context_features import *"
    ]
   },
   {
@@ -98,14 +100,24 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 39s, sys: 2.02 s, total: 1min 41s\n",
+      "Wall time: 2min 30s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "'''\n",
     "data_dir1 = 'data/Train/DrugBank/'\n",
     "data_dir2 = 'data/Train/MedLine/'\n",
     "'''\n",
     "\n",
-    "data_dir1 = 'data/medium_train_DrugBank/'\n",
+    "data_dir1 = 'data/small_train_DrugBank/'\n",
     "# TODO: Read test data from the correct files\n",
     "\n",
     "def readXMLData(data_dir):\n",
@@ -126,10 +138,10 @@
     "    return(drugs_dataset)\n",
     "\n",
     "# Create a list of lists with the interactions of the file\n",
-    "XMLdata_DrugBank = readXMLData(data_dir1)\n",
+    "XMLdata = readXMLData(data_dir1)\n",
     "#XMLdata_MedLine = readXMLData(data_dir2)\n",
     "\n",
-    "XMLdata = XMLdata_DrugBank #+ XMLdata_MedLine"
+    "#XMLdata = XMLdata_DrugBank #+ XMLdata_MedLine"
    ]
   },
   {
@@ -140,39 +152,68 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of total sentences in the training dataset: 12998\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Number of total sentences in the training dataset:', len(XMLdata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
      "data": {
       "text/plain": [
-       "('Milk, milk products, and calcium-rich foods or drugs may impair the absorption of EMCYT.',\n",
-       " 'calcium',\n",
-       " 'EMCYT',\n",
-       " ['calcium', 'EMCYT'],\n",
+       "('Interaction with central nervous system depressants other than benzodiazepines has not been specifically studied;',\n",
+       " 'central nervous system depressants',\n",
+       " 'benzodiazepines',\n",
+       " ['central nervous system depressants', 'benzodiazepines'],\n",
        " ['NN',\n",
-       "  ',',\n",
-       "  'NN',\n",
-       "  'NNS',\n",
-       "  ',',\n",
-       "  'CC',\n",
-       "  'JJ',\n",
-       "  'NNS',\n",
-       "  'CC',\n",
-       "  'NNS',\n",
-       "  'MD',\n",
-       "  'VB',\n",
-       "  'DT',\n",
-       "  'NN',\n",
        "  'IN',\n",
-       "  'NNP',\n",
-       "  '.'],\n",
-       " 'mechanism')"
+       "  'JJ',\n",
+       "  'JJ',\n",
+       "  'NN',\n",
+       "  'VBZ',\n",
+       "  'JJ',\n",
+       "  'IN',\n",
+       "  'NNS',\n",
+       "  'VBZ',\n",
+       "  'RB',\n",
+       "  'VBN',\n",
+       "  'RB',\n",
+       "  'VBN',\n",
+       "  ':'],\n",
+       " ['Interaction',\n",
+       "  'with',\n",
+       "  'central nervous system depressants',\n",
+       "  'other',\n",
+       "  'than',\n",
+       "  'benzodiazepines',\n",
+       "  'has',\n",
+       "  'not',\n",
+       "  'been',\n",
+       "  'specifically',\n",
+       "  'studied',\n",
+       "  ';'],\n",
+       " 'none')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XMLdata[0]"
+    "XMLdata[1]"
    ]
   },
   {
@@ -193,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -204,14 +245,18 @@
     "    \n",
     "def sent2features(tupl, i, database):\n",
     "    \n",
-    "    if len(tupl) != 6:\n",
+    "    if len(tupl) != 7:\n",
     "        raise ValueError('The introduced tuple does not have the correct length')\n",
     "    sent = tupl[0]\n",
     "    ent1 = tupl[1]\n",
     "    ent2 = tupl[2]\n",
     "    ent_list = tupl[3]\n",
     "    pos_tags = tupl[4]\n",
+    "    tok_sent = tupl[5] # Tokenized sentence\n",
     "    \n",
+    "    prefixes = r'^alk|^meth|^eth|^prop|^but|^pent|^hex|^hept|^oct|^non|^dec|^undec|^dodec|^eifcos|^di|^tri|^tetra|^penta|^hexa|^hepta'\n",
+    "    suffixes = r'ane$|ene$|yne$|yl$|ol$|al$|oic$|one$|ate$|amine$|amide$'\n",
+    "\n",
     "    features = {\n",
     "        \n",
     "    'ent1': ent1,\n",
@@ -269,12 +314,13 @@
     "    \n",
     "    # Domain knowledge\n",
     "    # Entity 1\n",
-    "    'ent1_contains_drug_sufix': containsSufix(ent1),\n",
-    "    'ent1_contains_drug_prefix': containsPrefix(ent1),\n",
+    "    'ent1_drug_sufix': getSuffix(ent1, suffixes),\n",
+    "    'ent1_drug_prefix': getPrefix(ent1, prefixes),\n",
     "\n",
     "    # Entity 2\n",
-    "    'ent2_contains_drug_sufix': containsSufix(ent2),\n",
-    "    'ent2_contains_drug_prefix': containsPrefix(ent2),\n",
+    "    'ent2_drug_sufix': getSuffix(ent2, suffixes),\n",
+    "    'ent2_drug_prefix': getPrefix(ent2, prefixes),\n",
+    "\n",
     "        \n",
     "    # Is in DrugBank dataset\n",
     "    'ent1_isInDB':isTokenInDB(ent1,database),\n",
@@ -282,14 +328,14 @@
     "    \n",
     "        \n",
     "    # Context features\n",
-    "    'n_tokens_bw_entities': countTokensBetweenEntities(sent, ent1, ent2),\n",
-    "    'n_entities_bw_entities': countEntitiesBetweenEntities(sent, ent1, ent2, ent_list),\n",
-    "    'n_modal_verbs_bw_entities': countModalVerbsBetweenEntities(sent, ent1, ent2),\n",
-    "    'sentence_contains_neg': sentenceContainsNegation(sent),\n",
-    "    'keywords_bw_entities': keyWordsBetweenEntities(sent, ent1, ent2)\n",
+    "    #'n_tokens_bw_entities': countTokensBetweenEntities(sent, ent1, ent2),\n",
+    "    'n_entities_bw_entities': countEntitiesBetweenEntities(tok_sent, ent1, ent2, ent_list),\n",
+    "    'n_modal_verbs_bw_entities': countModalVerbsBetweenEntities(tok_sent, ent1, ent2),\n",
+    "    'sentence_contains_neg': sentenceContainsNegation(tok_sent),\n",
+    "    'keywords_bw_entities': keyWordsBetweenEntities(tok_sent, ent1, ent2)\n",
+    "    'first_modal_sentence': getFirstModalVerb(tok_sent)\n",
+    "    'POS_tags_sentence_simpl': createSimplifiedPOSPath(pos_tags)    \n",
     "        \n",
-    "    # TODO: Finish this    \n",
-    "    # 'POS_tags_sentence': createPOSpath(sent, ent1, ent2, simplified = True) \n",
     "    }\n",
     "\n",
     "    return features\n",
@@ -305,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -314,8 +360,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 41.9 s, sys: 132 ms, total: 42 s\n",
-      "Wall time: 42.2 s\n"
+      "CPU times: user 10.3 s, sys: 250 ms, total: 10.5 s\n",
+      "Wall time: 19.5 s\n"
      ]
     }
    ],
@@ -339,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -363,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -371,18 +417,18 @@
     {
      "data": {
       "text/plain": [
-       "[{'ent1': 'Pimozide',\n",
+       "[{'ent1': 'norfloxacin',\n",
        "  'ent1_all_uppercase_letters': 0,\n",
-       "  'ent1_caps_mix': 1,\n",
-       "  'ent1_contains_capital_letter': 1,\n",
-       "  'ent1_contains_drug_prefix': 0,\n",
-       "  'ent1_contains_drug_sufix': 0,\n",
+       "  'ent1_caps_mix': 0,\n",
+       "  'ent1_contains_capital_letter': 0,\n",
        "  'ent1_contains_real_numbers': 0,\n",
+       "  'ent1_drug_prefix': 'none',\n",
+       "  'ent1_drug_sufix': 'none',\n",
        "  'ent1_has_digit': 0,\n",
-       "  'ent1_initial_capital_letter': 1,\n",
+       "  'ent1_initial_capital_letter': 0,\n",
        "  'ent1_initial_digit': 0,\n",
        "  'ent1_intermediate_dash': 0,\n",
-       "  'ent1_isInDB': False,\n",
+       "  'ent1_isInDB': True,\n",
        "  'ent1_is_Dash': 0,\n",
        "  'ent1_is_end_punctuation': 0,\n",
        "  'ent1_is_roman_letter': 0,\n",
@@ -391,22 +437,22 @@
        "  'ent1_punctuation': 0,\n",
        "  'ent1_single_capital_letter': 0,\n",
        "  'ent1_single_digit': 0,\n",
-       "  'ent1_word[-2:]': 'de',\n",
-       "  'ent1_word[-3:]': 'ide',\n",
-       "  'ent1_word[-4:]': 'zide',\n",
-       "  'ent1_word[-5:]': 'ozide',\n",
-       "  'ent2': 'Celexa',\n",
+       "  'ent1_word[-2:]': 'in',\n",
+       "  'ent1_word[-3:]': 'cin',\n",
+       "  'ent1_word[-4:]': 'acin',\n",
+       "  'ent1_word[-5:]': 'xacin',\n",
+       "  'ent2': 'quinine',\n",
        "  'ent2_all_uppercase_letters': 0,\n",
-       "  'ent2_caps_mix': 1,\n",
-       "  'ent2_contains_capital_letter': 1,\n",
-       "  'ent2_contains_drug_prefix': 0,\n",
-       "  'ent2_contains_drug_sufix': 0,\n",
+       "  'ent2_caps_mix': 0,\n",
+       "  'ent2_contains_capital_letter': 0,\n",
        "  'ent2_contains_real_numbers': 0,\n",
+       "  'ent2_drug_prefix': 'none',\n",
+       "  'ent2_drug_sufix': 'none',\n",
        "  'ent2_has_digit': 0,\n",
-       "  'ent2_initial_capital_letter': 1,\n",
+       "  'ent2_initial_capital_letter': 0,\n",
        "  'ent2_initial_digit': 0,\n",
        "  'ent2_intermediate_dash': 0,\n",
-       "  'ent2_isInDB': False,\n",
+       "  'ent2_isInDB': True,\n",
        "  'ent2_is_Dash': 0,\n",
        "  'ent2_is_end_punctuation': 0,\n",
        "  'ent2_is_roman_letter': 0,\n",
@@ -415,24 +461,23 @@
        "  'ent2_punctuation': 0,\n",
        "  'ent2_single_capital_letter': 0,\n",
        "  'ent2_single_digit': 0,\n",
-       "  'ent2_word[-2:]': 'xa',\n",
-       "  'ent2_word[-3:]': 'exa',\n",
-       "  'ent2_word[-4:]': 'lexa',\n",
-       "  'ent2_word[-5:]': 'elexa',\n",
+       "  'ent2_word[-2:]': 'ne',\n",
+       "  'ent2_word[-3:]': 'ine',\n",
+       "  'ent2_word[-4:]': 'nine',\n",
+       "  'ent2_word[-5:]': 'inine',\n",
        "  'keywords_bw_entities': 0,\n",
-       "  'n_entities_bw_entities': 1,\n",
+       "  'n_entities_bw_entities': 0,\n",
        "  'n_modal_verbs_bw_entities': 0,\n",
-       "  'n_tokens_bw_entities': 3,\n",
        "  'sentence_contains_neg': 0}]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train[7]"
+    "X_train[10]"
    ]
   },
   {
@@ -451,15 +496,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "# We don't want to include the 'none' label for the optimization\n",
